@@ -2,6 +2,7 @@
 
 - Revert 2.4.1.2 hotfix
 - Remove population caching
+- Disable service selection buttons by default in settings panel
 - New single zh translation
 
 
